--- a/microservicio-2/app/static/css/style.css
+++ b/microservicio-2/app/static/css/style.css
@@ -150,17 +150,18 @@
 }
 .historico-contenedor-input input{
     border: none;
-    box-shadow: var(--box-shadow1);
+    box-shadow: var(--box-shadow);
     border-radius: var(--redondo1);
     font-size: var(--font-size2);
     font-family: var(--fuente);
     color: var(--text-color1);
+    padding: 5px;
 }
 .historico-contenedor-filtro button{
     background: var(--text-color1);
     color: var(--text-color2);
     border: none;
-    box-shadow: var(--box-shadow1);
+    box-shadow: var(--box-shadow);
     border-radius: var(--redondo1);
     font-size: var(--font-size1);
     font-family: var(--fuente);
