se modifico el api de historico para que mande toda la informacion en el formato correcto para hacer una grafica de una manera sencilla desde el front asi como el codigo js para pintar esa grafica con los datos

--- a/microservicio-2/app/static/css/style.css
+++ b/microservicio-2/app/static/css/style.css
@@ -168,6 +168,11 @@
     padding: 10px;
 }
 
+.historico-contenedor-filtro button:active{
+    transform: scale(0.96);
+    transition-duration: 140ms;
+}
+
 /* fin del codigo para la seccion de historico*/
 
 
