--- a/microservicio-2/app/templates/index.html
+++ b/microservicio-2/app/templates/index.html
@@ -63,57 +63,12 @@
     </div>
 
     <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/herramientas.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/monitoreo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/historico.js' %}"></script>
     <script>
 
-        var canvas3 = document.getElementById('grafica-historico-temperatura').getContext('2d');//seleccionamos el canvas
-        var canvas4 = document.getElementById('grafica-historico-humedad').getContext('2d');//seleccionamos el canvas
-
-        var chart3 = new Chart(canvas3,obtenerMoldeGrafica('Temperatura'));//le pasamos el grafico y la data para representarlo
-        var chart4 = new Chart(canvas4,obtenerMoldeGrafica('Humedad'));//le pasamos el grafico y la data para representarlo
-
-        chart3.update();
-        chart4.update(); 
-           
-        var urlFiltrarHistorico = 'http://'+window.location.hostname+':8001/';
-
-
-        function filtrarHistorico(){
-            let contenedores = document.querySelectorAll('.historico-contenedor-input');
-            let fechaInicio = contenedores[0].children[1].value;
-            let fechaFinal = contenedores[1].children[1].value;
-            
-            if(fechaInicio != '' && fechaFinal != ''){
-                fetch(urlFiltrarHistorico+'api/addLecturaFiltro?fecha_inicio='+fechaInicio+'&fecha_final='+fechaFinal,{
-                method: 'GET',
-                headers:{
-                'Content-Type': 'application/json',
-                'Authorization': localStorage.getItem('token')
-                },
-                mode: 'cors', // Habilita CORS
-                }).then(response =>{
-                    if(response.ok){// si la respuesta es correcta entonces
-                        response.json().then(datos=>{
-                            if(datos.lista_temperatura.length >0){
-                                chart3.data.labels = datos.lista_fechas;
-                                chart3.data.datasets[0].data = datos.lista_temperatura;
-                                chart3.update();
-                                
-                                chart4.data.labels = datos.lista_fechas;
-                                chart4.data.datasets[0].data = datos.lista_humedad;
-                                chart4.update();
-                            }else{
-                                alert('no hay datos en ese rango de fechas');
-                            }
-                        });
-                    }else{
-                        //procesarRespuesta401(response.clone());
-                    }
-
-                }).catch(error=>{console.error(error);});
-            }
-
-        }
+        
         
         
     </script>
