--- a/microservicio-2/app/static/css/style.css
+++ b/microservicio-2/app/static/css/style.css
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    margin-bottom: 60px;
 }
 .fondo-modal{
     position: fixed;
@@ -308,6 +309,27 @@
     .monitoreo-graficas{
         width: 100%;
         height: 400px;
+    }
+    .historico-contenedor-filtro button{
+        width: 50%;
+    }
+    .monitoreo-contenedor-etiquetas label{
+        width: 100%;
+        text-align: center;
+    }
+    .monitoreo-contenedor-etiquetas{
+        margin-top: 0px;
+    }
+    .contenedor-opciones{
+        position: fixed;
+        z-index: 1;
+        bottom: 0;
+    }
+    .contenedor-principal {
+        margin-top: 0px;
+    }
+    .contenedor-opciones button{
+        font-size: var(--font-size1);
     }
 
 }
