se agrego la opcion para mostrar la opcion seleccionada en el path  sin que la pagina se recargue y ademas que el usuario pueda retroceder en el historial sin problemas

--- a/microservicio-2/app/templates/index.html
+++ b/microservicio-2/app/templates/index.html
@@ -11,9 +11,9 @@
 <body>
 
     <div class="contenedor-opciones">
-        <button onclick="mostrarOpcionMonitoreo();activarBotonSeleccionado(this);">Monitoreo</button>
-        <button onclick="mostrarOpcionHistorico();activarBotonSeleccionado(this);">Histórico</button>
-        <button onclick="mostrarOpcionPrediccion();activarBotonSeleccionado(this);">Predicción</button>
+        <button id="btn-opcion-monitoreo" onclick="mostrarOpcionMonitoreo(true)">Monitoreo</button>
+        <button id="btn-opcion-historico" onclick="mostrarOpcionHistorico(true)">Histórico</button>
+        <button id="btn-opcion-prediccion" onclick="mostrarOpcionPrediccion(true)">Predicción</button>
     </div>
 
     <div class="contenedor-total">
